通过密钥上传

--- a/views/index.html
+++ b/views/index.html
@@ -2,18 +2,23 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>项目名-公司名</title>
+	<title>安居源-南京藤蔓达网络科技有限公司</title>
+	<meta name="keywords" content="南京藤蔓达网络科技有限公司">
+	<meta name="description" content="南京藤蔓达网络科技有限公司务涉及网站开发，手机APP开发，以及游戏开发运营等，
+	秉承“助力职场，成就梦想”的理念，致力于中国移动互联网研发人才一体化服务，全力打造移动互联网高端研发人才服务平台。
+	 集团目前拥有100多项专利产品，50多个APP项目，500家合作企业。">
 	<meta name="viewport" content="width=device-width,initial-scale=1,
 		maximum-scale=1,minimum-scale=1,user-scalable=no">
-	<link rel="stylesheet" href="./public/css/loading.css">
+	<link rel="stylesheet" href="./../public/css/loading.css">
 </head>
 <body>
-	<div class="logo"><img src="./public/img/content_img_logo@2x.png"></div>
+	<div class="logo"><img src="./../public/img/content_img_logo@2x.png"></div>
 	<div class="copy">Copyright<span>&copy;</span>2016</div>
 </body>
 <script>
-window.onload=function(){
-	location.href="login/login.html"
+function remainTime(){
+	location.href="login/login.html";
 }
+window.onload = setTimeout(remainTime,1500);
 </script>
 </html>
