--- a/views/login/login.html
+++ b/views/login/login.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>登录</title>
+	<title>安居源-南京藤蔓达网络科技有限公司</title>
+	<meta name="keywords" content="南京藤蔓达网络科技有限公司">
+	<meta name="description" content="南京藤蔓达网络科技有限公司务涉及网站开发，手机APP开发，以及游戏开发运营等，
+	秉承“助力职场，成就梦想”的理念，致力于中国移动互联网研发人才一体化服务，全力打造移动互联网高端研发人才服务平台。
+	 集团目前拥有100多项专利产品，50多个APP项目，500家合作企业。">
 	<meta name="viewport" content="width=device-width,initial-scale=1,
 		maximum-scale=1,minimum-scale=1,user-scalable=no">
 	<link rel="stylesheet" href="../public/css/login/login.css">
@@ -23,7 +27,7 @@
 			密码:<input type="password" placeholder="请输入您的账号密码">
 		</div>
 	</section>
-	<button class="btn_login">
+	<button class="btn_login" onclick="hrefToHome()">
 		登录
 	</button>
 	<div class="register_and_forget">
@@ -38,6 +42,8 @@ function hrefToForget(){
 function hrefToRegister(){
 	location.href="register.html"
 }
-
+function hrefToHome(){
+	location.href="../homepage/home.html"
+}
 </script>
 </html>
