--- a/public/css/login/operator.css
+++ b/public/css/login/operator.css
@@ -1,6 +1,7 @@
 body {
   background: #efeff4;
   margin: 0;
+  font-family: "Arial", " Heiti SC", "宋体", sans-serif;
 }
 ul {
   padding: 0;
@@ -17,7 +18,6 @@ ul li {
   text-align: center;
   background: #fff;
   color: #ea5404;
-  font-family: "Arial", "Microsoft YaHei", "黑体", "宋体", sans-serif;
   line-height: 20px;
   padding: 3% 3%;
   border-bottom: 1px solid #d6d7dc;
