--- a/public/css/login/register.css
+++ b/public/css/login/register.css
@@ -1,6 +1,7 @@
 body {
   background: #efeff4;
   margin: 0;
+  font-family: "Arial", " Heiti SC", "宋体", sans-serif;
 }
 ul,
 li {
@@ -13,7 +14,6 @@ li {
   text-align: center;
   background: #fff;
   color: #ea5404;
-  font-family: "Arial", "Microsoft YaHei", "黑体", "宋体", sans-serif;
   line-height: 20px;
   padding: 3% 3%;
   border-bottom: 1px solid #d6d7dc;
@@ -83,11 +83,14 @@ section .options {
   overflow: hidden;
 }
 section .options li {
-  padding: 8px 11px;
+  padding: 8px 12px;
   border-bottom: 1px solid #e1e1e1;
   color: #fff;
   font-size: 14px;
   line-height: normal;
+}
+section .options li:nth-last-child(1) {
+  border: none;
 }
 section .line {
   height: 1px;
