--- a/stylus/login/agent.styl
+++ b/stylus/login/agent.styl
@@ -2,6 +2,7 @@ $orange=#ea5404
 body
   background #efeff4
   margin 0
+  font-family "Arial"," Heiti SC","宋体",sans-serif
 ul
   padding 0
   list-style: none
@@ -15,7 +16,6 @@ ul
   text-align center
   background #FFFFFF
   color $orange
-  font-family "Arial","Microsoft YaHei","黑体","宋体",sans-serif
   line-height 20px
   padding 3% 3%
   border-bottom 1px solid #d6d7dc
