--- a/stylus/login/forget.styl
+++ b/stylus/login/forget.styl
@@ -1,12 +1,12 @@
 body
   background #efeff4
   margin 0
+  font-family "Arial"," Heiti SC","宋体",sans-serif
 .header
   font-size 20px
   text-align center
   background #FFFFFF
   color #ea5404
-  font-family "Arial","Microsoft YaHei","黑体","宋体",sans-serif
   line-height 20px
   padding 3% 3%
   border-bottom 1px solid #d6d7dc
