--- a/stylus/login/register.styl
+++ b/stylus/login/register.styl
@@ -1,6 +1,7 @@
 body
   background #efeff4
   margin 0
+  font-family "Arial"," Heiti SC","宋体",sans-serif
 ul,li
   padding 0
   list-style: none
@@ -10,7 +11,6 @@ ul,li
   text-align center
   background #FFFFFF
   color #ea5404
-  font-family "Arial","Microsoft YaHei","黑体","宋体",sans-serif
   line-height 20px
   padding 3% 3%
   border-bottom 1px solid #d6d7dc
@@ -68,11 +68,13 @@ section
     height 0
     overflow hidden
     li
-      padding 8px 11px
+      padding 8px 12px
       border-bottom 1px solid #e1e1e1
       color white
       font-size 14px
       line-height normal
+    li:nth-last-child(1)
+      border none
   .line
     height 1px
     border-top 1px Solid #d6d7dc
