--- a/views/login/register.html
+++ b/views/login/register.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>忘记密码</title>
+	<title>安居源-南京藤蔓达网络科技有限公司</title>
+	<meta name="keywords" content="南京藤蔓达网络科技有限公司">
+	<meta name="description" content="南京藤蔓达网络科技有限公司务涉及网站开发，手机APP开发，以及游戏开发运营等，
+	秉承“助力职场，成就梦想”的理念，致力于中国移动互联网研发人才一体化服务，全力打造移动互联网高端研发人才服务平台。
+	 集团目前拥有100多项专利产品，50多个APP项目，500家合作企业。">
 	<meta name="viewport" content="width=device-width,initial-scale=1,
 		maximum-scale=1,minimum-scale=1,user-scalable=no">
 	<link rel="stylesheet" href="../public/css/login/register.css">
@@ -50,13 +54,9 @@
 	</section>
 	<button class="btn_register" onclick="hrefToLoginSuccess()">注册</button>
 	<div class="agreement">
-		<span>注册即代表同意</span><a href="agreement.html">《活力矩阵用户协议》</a>
+		<span>注册即代表同意</span><a href="agreement.html">《安居源用户协议》</a>
 	</div>
 </body>
-<script src="../../public/js/login/register.js"></script>
-<script>
-	function hrefToLoginSuccess(){
-		location.href="loginSuccess.html"
-	}
-</script>
+<script src="../../public/js/register.js"></script>
+<script src="../../public/js/hypertext_reference.js"></script>
 </html>
