--- a/stylus/me/me.styl
+++ b/stylus/me/me.styl
@@ -5,16 +5,18 @@ body
 .header
   font-size 20px
   text-align center
-  background #666
-  color white
+  background #fff
+  color #323232
   line-height 20px
   padding 3% 3%
   border-bottom 1px solid #d6d7dc
   img
-    width 18px
-  span
-    float left
-    color white
+    padding 14px 12px
+    width 16px
+    position absolute
+    right 0
+    top 0
+
 
 footer.bottom_nav
   width 100%
