--- a/views/homepage/home.html
+++ b/views/homepage/home.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>安居源-南京藤蔓达网络科技有限公司</title>
-	<meta name="keywords" content="南京藤蔓达网络科技有限公司">
-	<meta name="description" content="南京藤蔓达网络科技有限公司务涉及网站开发，手机APP开发，以及游戏开发运营等，
+	<title>安居源-南京鸿鸣网络科技有限公司</title>
+	<meta name="keywords" content="南京鸿鸣网络科技有限公司">
+	<meta name="description" content="南京鸿鸣网络科技有限公司务涉及网站开发，手机APP开发，以及游戏开发运营等，
 	秉承“助力职场，成就梦想”的理念，致力于中国移动互联网研发人才一体化服务，全力打造移动互联网高端研发人才服务平台。
 	 集团目前拥有100多项专利产品，50多个APP项目，500家合作企业。">
 	<meta name="viewport" content="width=device-width,initial-scale=1,
@@ -21,23 +21,26 @@
 		<div class="header_nav">
 			<h3>安居源</h3>
 			<div class="search_box">
-				<img src="..\public\img\homepage\banner_icon_search@2x.png" alt="">
+				<img src="../../public/img/homepage/banner_icon_search@2x.png" alt="">
 				<input type="search" placeholder="挑好房，上安居源">
 			</div>
 		</div>
 		<ul class="circle_box">
-			<li class="btn"><img src="../public/img/homepage/banner_icon_point_nor@2x.png" alt=""></li>
-			<li class="btn"><img src="../public/img/homepage/banner_icon_point_press@2x.png" alt=""></li>
-			<li class="btn"><img src="../public/img/homepage/banner_icon_point_nor@2x.png" alt=""></li>
-			<li class="btn"><img src="../public/img/homepage/banner_icon_point_nor@2x.png" alt=""></li>
+			<li class="btn"><img src="../../public/img/homepage/banner_icon_point_nor@2x.png" alt=""></li>
+			<li class="btn"><img src="../../public/img/homepage/banner_icon_point_press@2x.png" alt=""></li>
+			<li class="btn"><img src="../../public/img/homepage/banner_icon_point_nor@2x.png" alt=""></li>
+			<li class="btn"><img src="../../public/img/homepage/banner_icon_point_nor@2x.png" alt=""></li>
 		</ul>
+
 		<ul class="carousel" id="carousel">
-			<li class="carousel-li"><img src="../public/img/homepage/banner_img@2x.png" alt=""></li>
-			<li class="carousel-li"><img src="../public/img/homepage/banner_img@2x.png" alt=""></li>
-			<li class="carousel-li"><img src="../public/img/homepage/banner_img@2x.png" alt=""></li>
-			<li class="carousel-li"><img src="../public/img/homepage/banner_img@2x.png" alt=""></li>
+			<li class="carousel-li"><img src="../../public/img/homepage/banner_img@2x.png" alt="1"></li>
+			<li class="carousel-li"><img src="../../public/img/homepage/banner_img@2x.png" alt="2"></li>
+			<li class="carousel-li"><img src="../../public/img/homepage/banner_img@2x.png" alt="3"></li>
+			<li class="carousel-li"><img src="../../public/img/homepage/banner_img@2x.png" alt="4"></li>
 		</ul>
+
 	</header>
+
 	<nav class="menus">
 		<div class="menu" id="menu_region" onclick="">
 			<h5>区域</h5>
@@ -83,7 +86,6 @@
 			<li><p>金桥</p></li>
 		</ul>
 	</div>
-	<div ></div>
 
 	<section class="details">
 		<div class="details_pic">
@@ -214,10 +216,9 @@ $(document).ready(function(){
 	});
 
 	$("#area_pudong" ).on("tap",function(){
-
 		$("ul#regions_details p" ).css("display","block");
-
-	})
+	});
+	$()
 });
 
 
