--- a/public/css/me/me.css
+++ b/public/css/me/me.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   background: #efeff4;
   margin: 0;
@@ -18,6 +22,124 @@ body {
   position: absolute;
   right: 0;
   top: 0;
+}
+.person_info {
+  text-align: left;
+  border-bottom: 1px solid #d6d7dc;
+  height: 96px;
+  line-height: 96px;
+  margin-top: 10px;
+  background: #fff;
+  font-size: 14px;
+  display: flex;
+}
+.person_info div:nth-of-type(1) {
+  flex: 1;
+}
+.person_info div:nth-of-type(2) {
+  flex: 6;
+}
+.person_info div:nth-of-type(3) {
+  flex: 1;
+}
+.person_info .head_image {
+  width: 64px;
+  height: 64px;
+  padding: 12px;
+  position: relative;
+}
+.person_info .person_data {
+  padding: 26px 0;
+}
+.person_info .person_data h4 {
+  line-height: 16px;
+  color: #323232;
+  font-weight: normal;
+  display: block;
+  height: 24px;
+  font-size: 14px;
+}
+.person_info .person_data p {
+  line-height: 16px;
+  color: #646464;
+  height: 24px;
+  font-size: 12px;
+}
+.person_info .person_data p img {
+  position: relative;
+  top: 2px;
+  width: 11px;
+  height: 12px;
+}
+.person_info img#login_user_head {
+  width: 64px;
+}
+.person_info input {
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  position: absolute;
+  top: 12px;
+  left: 12px;
+  opacity: 0;
+}
+.person_info a {
+  float: left;
+  text-decoration: none;
+  color: #323232;
+}
+.person_info img#login_right_icon {
+  width: 10px;
+  float: right;
+  padding: 39px 12px;
+}
+.save_info {
+  line-height: 30px;
+  display: flex;
+  background: #fff;
+  padding: 7px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #d6d7dc;
+}
+.save_info div {
+  flex: 1;
+  text-align: center;
+  color: #646464;
+}
+.save_info div span {
+  color: #646464;
+  font-size: 12px;
+}
+.save_info div span:before {
+  content: '0';
+  font-size: 16px;
+  font-weight: bold;
+  font-style: normal;
+  position: relative;
+  top: 2px;
+  left: -5px;
+}
+.save_info .collection {
+  border-right: 1px solid #d6d7dc;
+}
+.content_list {
+  padding: 12px;
+  background: #fff;
+  font-size: 0.9em;
+  color: #323232;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #d6d7dc;
+}
+.content_list img:nth-child(1) {
+  width: 20px;
+  padding: 2px;
+  position: relative;
+  top: 4px;
+}
+.content_list img:nth-child(3) {
+  width: 8px;
+  float: right;
+  margin-top: 7px;
 }
 footer.bottom_nav {
   width: 100%;
