--- a/views/me/me.html
+++ b/views/me/me.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>安居源-南京藤蔓达网络科技有限公司</title>
-	<meta name="keywords" content="南京藤蔓达网络科技有限公司">
-	<meta name="description" content="南京藤蔓达网络科技有限公司务涉及网站开发，手机APP开发，以及游戏开发运营等，
+	<title>安居源-南京鸿鸣网络科技有限公司</title>
+	<meta name="keywords" content="南京鸿鸣网络科技有限公司">
+	<meta name="description" content="南京鸿鸣网络科技有限公司务涉及网站开发，手机APP开发，以及游戏开发运营等，
 	秉承“助力职场，成就梦想”的理念，致力于中国移动互联网研发人才一体化服务，全力打造移动互联网高端研发人才服务平台。
 	 集团目前拥有100多项专利产品，50多个APP项目，500家合作企业。">
 	<meta name="viewport" content="width=device-width,initial-scale=1,
@@ -16,13 +16,60 @@
 		我 <img src="../../public/img/me/nav_set_icon@2x.png" alt="">
 	</header>
 
-	<div class="info_box"></div>
+	<div class="person_info" onclick="hrefToInfo_detail()">
+		<div class="head_image">
+			<input type="file">
+			<img id="login_user_head"  src="../../public/img/me/log in_user-head@2x.png" alt="">
+		</div>
+		<div class="person_data">
+			<h4>呱呱呱叫</h4>
+			<p>修改资料<img src="../../public/img/me/log-in_edit_icon@2x.png" alt=""></p>
+		</div>
+		<div class="login_right">
+			<img id="login_right_icon" src="../../public/img/me/log in_right_icon@2x.png" alt="">
+		</div>
+	</div>
+
+	<div class="save_info">
+		<div class="collection"><span>收藏</span></div>
+		<div class="integration"><span>积分</span></div>
+	</div>
+
+	<div class="content_list">
+		<img src="../../public/img/me/content_list_icon01@2x.png" alt="">
+		<span>我发布的需求</span>
+		<img src="../../public/img/me/content_list_right_icon@2x.png" alt="">
+	</div>
+
+	<div class="content_list">
+		<img src="../../public/img/me/content_list_icon02@2x.png" alt="">
+		<span>我发布的房源</span>
+		<img src="../../public/img/me/content_list_right_icon@2x.png" alt="">
+	</div>
+
+	<div class="content_list">
+		<img src="../../public/img/me/content_list_icon03@2x.png" alt="">
+		<span>我预约的房源</span>
+		<img src="../../public/img/me/content_list_right_icon@2x.png" alt="">
+	</div>
+
+	<div class="content_list">
+		<img src="../../public/img/me/content_list_icon04@2x.png" alt="">
+		<span>历史交易</span>
+		<img src="../../public/img/me/content_list_right_icon@2x.png" alt="">
+	</div>
+
+	<div class="content_list">
+		<img src="../../public/img/me/content_list_icon05@2x.png" alt="">
+		<span>过期房源</span>
+		<img src="../../public/img/me/content_list_right_icon@2x.png" alt="">
+	</div>
 
 	<div class="news_interval"></div>
 	<footer class="bottom_nav">
 		<div class="bottom_icon" id="bottom_home_cell" onclick="hrefToHome()">
-			<img src="../../public/img/information/bottom_press_icon04@2x.png" alt="">
-			<p class="active">首页</p>
+			<img src="../../public/img/information/bottom_nor_icon04@2x.png" alt="">
+			<p >首页</p>
 		</div>
 		<div class="bottom_icon" id="bottom_news_cell" onclick="hrefToAppointment()">
 			<img src="../../public/img/information/bottom_nor_icon03@2x.png" alt="">
@@ -36,15 +83,11 @@
 			<p>信息</p>
 		</div>
 		<div class="bottom_icon" id="bottom_me_cell" onclick="hrefToMe()">
-			<img src="../../public/img/information/bottom_nor_icon01@2x.png" alt="">
-			<p>我</p>
+			<img src="../../public/img/information/bottom_press_icon01@2x.png" alt="">
+			<p class="active">我</p>
 		</div>
 	</footer>
+
 </body>
-<script>
-function hrefToHome(){location.href="../homepage/home.html"}
-function hrefToAppointment(){location.href="../appointment/appointment.html"}
-function hrefToNews(){location.href="../information/news.html"}
-function hrefToMe(){location.href="../me/me.html"}
-</script>
+<script src="../../public/js/hypertext_reference.js"></script>
 </html>
