--- a/stylus/homepage/home.styl
+++ b/stylus/homepage/home.styl
@@ -138,6 +138,8 @@ div.regions_hidden_box
       position absolute
     .hide
       display none
+    #allreg
+      display block
     p
       margin 0
       border-bottom #e1e1e1 1px solid
