--- a/views/homepage/home.html
+++ b/views/homepage/home.html
@@ -70,7 +70,7 @@
 		<ul class="regions" id="regions_towns">
 			<li class="reg act">全部</li>
 			<li class="reg">闵行</li>
-			<li class="reg" id="area_pudong">浦东</li>
+			<li class="reg">浦东</li>
 			<li class="reg">嘉定</li>
 			<li class="reg">宝山</li>
 			<li class="reg">闸北</li>
@@ -79,41 +79,49 @@
 			<li class="reg">普陀</li>
 		</ul>
 		<div class="regions" id="regions_details">
-			<div class="reg"><ul class="hide">
+			<div class="reg"><ul class="hide" id="allreg">
 					<li><p>全部</p></li>
 					<li><p>八佰伴</p></li>
 					<li><p>川沙</p></li>
 					<li><p>花木</p></li>
 					<li><p>金桥</p></li>
+					<li><p>华府天地愉园</p></li>
+					<li><p>万科公园大道</p></li>
+					<li><p>七宝宝龙城</p></li>
+					<li><p>凤凰城</p></li>
 			</ul></div>
 			<div class="reg"><ul class="hide">
-				<li><p>111</p></li>
-				<li><p>八伴</p></li>
-				<li><p>川沙</p></li>
-				<li><p>花木</p></li>
-				<li><p>金桥</p></li>
+				<li><p>闵行</p></li>
+				<li><p>华府天地愉园</p></li>
+				<li><p>万科公园大道</p></li>
+				<li><p>七宝宝龙城</p></li>
+				<li><p>凤凰城</p></li>
 			</ul></div>
 			<div class="reg"><ul class="hide">
-				<li><p>222</p></li>
-				<li><p>八佰伴</p></li>
-				<li><p>川沙</p></li>
-				<li><p>花木</p></li>
-				<li><p>金桥</p></li>
+				<li><p>浦东</p></li>
+				<li><p>潍坊</p></li>
+				<li><p>陆家嘴</p></li>
+				<li><p>周家渡</p></li>
+				<li><p>南码头</p></li>
+				<li><p>塘桥</p></li>
+				<li><p>沪东</p></li>
 			</ul></div>
 			<div class="reg"><ul class="hide">
-				<li><p>333</p></li>
-				<li><p>八佰伴</p></li>
-				<li><p>川沙</p></li>
-				<li><p>花木</p></li>
-				<li><p>金桥</p></li>
+				<li><p>嘉定</p></li>
+				<li><p>新成路</p></li>
+				<li><p>真新街</p></li>
+				<li><p>菊园新区</p></li>
+				<li><p>南翔镇</p></li>
+				<li><p>安亭镇</p></li>
 			</ul></div>
 			<div class="reg"><ul class="hide">
-				<li><p>444</p></li>
-				<li><p>八佰伴</p></li>
-				<li><p>川沙</p></li>
-				<li><p>花木</p></li>
-				<li><p>金桥</p></li>
+				<li><p>宝山</p></li>
+				<li><p>金地天地云墅</p></li>
+				<li><p>滨江公园壹号</p></li>
+				<li><p>保利熙悦</p></li>
+				<li><p>招商花园城</p></li>
 			</ul></div>
+
 			<div class="reg"><ul class="hide">
 				<li><p>555</p></li>
 				<li><p>八佰伴</p></li>
@@ -147,7 +155,7 @@
 
 	<section class="details">
 		<div class="details_pic">
-			<img src="../public/img/homepage/content_img_list@2x.png" alt="">
+			<img src="../../public/img/homepage/content_img_list@2x.png" alt="">
 		</div>
 		<div class="details_txt">
 			<h3>东方金融中心</h3>
@@ -160,7 +168,7 @@
 	</section>
 	<section class="details">
 		<div class="details_pic">
-			<img src="../public/img/homepage/content_img_list@2x.png" alt="">
+			<img src="../../public/img/homepage/content_img_list@2x.png" alt="">
 		</div>
 		<div class="details_txt">
 			<h3>东方金融中心</h3>
@@ -173,7 +181,7 @@
 	</section>
 	<section class="details">
 		<div class="details_pic">
-			<img src="../public/img/homepage/content_img_list@2x.png" alt="">
+			<img src="../../public/img/homepage/content_img_list@2x.png" alt="">
 		</div>
 		<div class="details_txt">
 			<h3>东方金融中心</h3>
@@ -186,7 +194,7 @@
 	</section>
 	<section class="details">
 		<div class="details_pic">
-			<img src="../public/img/homepage/content_img_list@2x.png" alt="">
+			<img src="../../public/img/homepage/content_img_list@2x.png" alt="">
 		</div>
 		<div class="details_txt">
 			<h3>东方金融中心</h3>
@@ -199,7 +207,7 @@
 	</section>
 	<section class="details">
 		<div class="details_pic">
-			<img src="../public/img/homepage/content_img_list@2x.png" alt="">
+			<img src="../../public/img/homepage/content_img_list@2x.png" alt="">
 		</div>
 		<div class="details_txt">
 			<h3>东方金融中心</h3>
