--- a/views/information/notice.html
+++ b/views/information/notice.html
@@ -9,7 +9,7 @@
 	 集团目前拥有100多项专利产品，50多个APP项目，500家合作企业。">
 	<meta name="viewport" content="width=device-width,initial-scale=1,
 		maximum-scale=1,minimum-scale=1,user-scalable=no">
-	<link rel="stylesheet" href="../public/css/information/notice.css">
+	<link rel="stylesheet" href="../../public/css/information/notice.css">
 </head>
 <body>
 	<header class="header">
@@ -33,25 +33,25 @@
 	<div class="news_interval"></div>
 	<footer class="bottom_nav">
 		<div class="bottom_icon" id="bottom_home_cell" onclick="hrefToHome()">
-			<img src="../public/img/information/bottom_nor_icon04@2x.png" alt="">
+			<img src="../../public/img/information/bottom_nor_icon04@2x.png" alt="">
 			<p >首页</p>
 		</div>
 		<div class="bottom_icon" id="bottom_news_cell" onclick="hrefToAppointment()">
-			<img src="../public/img/information/bottom_nor_icon03@2x.png" alt="">
+			<img src="../../public/img/information/bottom_nor_icon03@2x.png" alt="">
 			<p>预约</p>
 		</div>
 		<div class="bottom_icon" id="bottom_add_cell">
-			<img id="more" src="../public/img/information/bottom_icon05@2x.png" alt="">
+			<img id="more" src="../../public/img/information/bottom_icon05@2x.png" alt="">
 		</div>
 		<div class="bottom_icon" id="bottom_appointment_cell" onclick="hrefToNews()">
-			<img src="../public/img/information/bottom_press_icon02@2x.png" alt="">
+			<img src="../../public/img/information/bottom_press_icon02@2x.png" alt="">
 			<p class="active">信息</p>
 		</div>
 		<div class="bottom_icon" id="bottom_me_cell" onclick="hrefToMe()">
-			<img src="../public/img/information/bottom_nor_icon01@2x.png" alt="">
+			<img src="../../public/img/information/bottom_nor_icon01@2x.png" alt="">
 			<p>我</p>
 		</div>
 	</footer>
 </body>
-<script src="../public/js/hypertext_reference.js"></script>
+<script src="../../public/js/hypertext_reference.js"></script>
 </html>
