--- a/views/login/login.html
+++ b/views/login/login.html
@@ -9,21 +9,21 @@
 	 集团目前拥有100多项专利产品，50多个APP项目，500家合作企业。">
 	<meta name="viewport" content="width=device-width,initial-scale=1,
 		maximum-scale=1,minimum-scale=1,user-scalable=no">
-	<link rel="stylesheet" href="../public/css/login/login.css">
+	<link rel="stylesheet" href="../../public/css/login/login.css">
 </head>
 <body>
 	<header class="header">
-		<span><img src="../public/img/login/nav_back_icon@2x.png" alt=""></span>
+		<span><img src="../../public/img/login/nav_back_icon@2x.png" alt=""></span>
 		登录
 	</header>
 	<section>
 		<div>
-			<img src="../public/img/login/content_ID_icon@2x.png">
+			<img src="../../public/img/login/content_ID_icon@2x.png">
 			账号:<input type="text" id="ID" placeholder="请输入手机号码">
 		</div>
 		<div class="line"></div>
 		<div>
-			<img src="../public/img/login/content_password_icon@2x.png">
+			<img src="../../public/img/login/content_password_icon@2x.png">
 			密码:<input type="password" placeholder="请输入您的账号密码">
 		</div>
 	</section>
