--- a/views/login/operator.html
+++ b/views/login/operator.html
@@ -9,11 +9,11 @@
 	 集团目前拥有100多项专利产品，50多个APP项目，500家合作企业。">
 	<meta name="viewport" content="width=device-width,initial-scale=1,
 		maximum-scale=1,minimum-scale=1,user-scalable=no">
-	<link rel="stylesheet" href="../public/css/login/operator.css">
+	<link rel="stylesheet" href="../../public/css/login/operator.css">
 </head>
 <body>
 	<header class="header">
-		<span onclick="backToLogin()"><img src="../public/img/login/nav_back_icon@2x.png" alt=""></span>
+		<span onclick="backToLogin()"><img src="../../public/img/login/nav_back_icon@2x.png" alt=""></span>
 		运营商
 	</header>
 	<div class="interval">必填项</div>
