--- a/views/login/forget.html
+++ b/views/login/forget.html
@@ -9,33 +9,33 @@
 	 集团目前拥有100多项专利产品，50多个APP项目，500家合作企业。">
 	<meta name="viewport" content="width=device-width,initial-scale=1,
 		maximum-scale=1,minimum-scale=1,user-scalable=no">
-	<link rel="stylesheet" href="../public/css/login/forget.css">
+	<link rel="stylesheet" href="../../public/css/login/forget.css">
 </head>
 <body>
 	<header class="header">
-		<span class="icon_back" onclick="location.href='login.html'"><img src="../public/img/login/nav_back_icon@2x.png" alt=""></span>
+		<span class="icon_back" onclick="location.href='login.html'"><img src="../../public/img/login/nav_back_icon@2x.png" alt=""></span>
 		忘记密码
 		<span class="login" onclick="hrefToLogin()">登录</span>
 	</header>
 	<section>
 		<div>
-			<img src="../public/img/login/content_ID_icon@2x.png">
+			<img src="../../public/img/login/content_ID_icon@2x.png">
 			账号:<input type="text" id="ID" placeholder="请输入手机号码">
 		</div>
 		<div class="line"></div>
 		<div>
-			<img src="../public/img/login/content_verify_icon@2x.png">
+			<img src="../../public/img/login/content_verify_icon@2x.png">
 			验证码:<input type="password" placeholder="请输入验证码">
 			<button class="get_code" onclick="submitHandler(this)">获取验证码</button>
 		</div>
 		<div class="line"></div>
 		<div>
-			<img src="../public/img/login/content_password_icon@2x.png">
+			<img src="../../public/img/login/content_password_icon@2x.png">
 			密码:<input type="password" placeholder="请输入新的密码">
 		</div>
 		<div class="line"></div>
 		<div>
-			<img src="../public/img/login/content_password_icon@2x.png">
+			<img src="../../public/img/login/content_password_icon@2x.png">
 			密码:<input type="password" placeholder="请输入新的密码">
 		</div>
 	</section>
