最后一次提交

--- a/views/homepage/home.html
+++ b/views/homepage/home.html
@@ -153,6 +153,9 @@
 		</div>
 	</div>
 
+	<div class="">
+
+	</div>
 	<section class="details">
 		<div class="details_pic">
 			<img src="../../public/img/homepage/content_img_list@2x.png" alt="">
@@ -168,10 +171,10 @@
 	</section>
 	<section class="details">
 		<div class="details_pic">
-			<img src="../../public/img/homepage/content_img_list@2x.png" alt="">
+			<img src="../../public/img/homepage/content_img_list_2@2x.png" alt="">
 		</div>
 		<div class="details_txt">
-			<h3>东方金融中心</h3>
+			<h3>上海国际金融中心</h3>
 			<span class="detail_like" onclick="liked(this)"></span>
 			<p class="detail_address">浦东-八佰伴</p>
 			<button class="detail_btn">商务中心</button>
@@ -181,10 +184,10 @@
 	</section>
 	<section class="details">
 		<div class="details_pic">
-			<img src="../../public/img/homepage/content_img_list@2x.png" alt="">
+			<img src="../../public/img/homepage/content_img_list_3@2x.png" alt="">
 		</div>
 		<div class="details_txt">
-			<h3>东方金融中心</h3>
+			<h3>上海中心大厦</h3>
 			<span class="detail_like" onclick="liked(this)"></span>
 			<p class="detail_address">浦东-八佰伴</p>
 			<button class="detail_btn">商务中心</button>
@@ -194,10 +197,10 @@
 	</section>
 	<section class="details">
 		<div class="details_pic">
-			<img src="../../public/img/homepage/content_img_list@2x.png" alt="">
+			<img src="../../public/img/homepage/content_img_list_4@2x.png" alt="">
 		</div>
 		<div class="details_txt">
-			<h3>东方金融中心</h3>
+			<h3>金茂大厦</h3>
 			<span class="detail_like" onclick="liked(this)"></span>
 			<p class="detail_address">浦东-八佰伴</p>
 			<button class="detail_btn">商务中心</button>
@@ -207,10 +210,10 @@
 	</section>
 	<section class="details">
 		<div class="details_pic">
-			<img src="../../public/img/homepage/content_img_list@2x.png" alt="">
+			<img src="../../public/img/homepage/content_img_list_5@2x.png" alt="">
 		</div>
 		<div class="details_txt">
-			<h3>东方金融中心</h3>
+			<h3>葛洲坝大厦</h3>
 			<span class="detail_like" onclick="liked(this)"></span>
 			<p class="detail_address">浦东-八佰伴</p>
 			<button class="detail_btn">商务中心</button>
@@ -218,6 +221,7 @@
 			<span class="detail_data_Commission">佣金：1个月</span>
 		</div>
 	</section>
+
 	<div class="new_interval"></div>
 	<footer class="bottom_nav">
 		<div class="bottom_icon" id="bottom_home_cell" onclick="hrefToHome()">
