--- a/views/login/login.html
+++ b/views/login/login.html
@@ -19,31 +19,49 @@
 	<section>
 		<div>
 			<img src="../../public/img/login/content_ID_icon@2x.png">
-			账号:<input type="text" id="ID" placeholder="请输入手机号码">
+			账号:<input type="text" id="user" placeholder="测试号admin">
 		</div>
 		<div class="line"></div>
 		<div>
 			<img src="../../public/img/login/content_password_icon@2x.png">
-			密码:<input type="password" placeholder="请输入您的账号密码">
+			密码:<input type="password" id="passwd" placeholder="初始密码123456">
 		</div>
 	</section>
-	<button class="btn_login" onclick="hrefToHome()">
-		登录
-	</button>
+	<button class="btn_login" id="send">登录</button>
 	<div class="register_and_forget">
 		<span class="register" onclick="hrefToRegister()">注册</span>
 		<span class="forget" onclick="hrefToForget()">忘记密码？</span>
 	</div>
 </body>
+<script src="//cdn.bootcss.com/jquery/3.0.0/jquery.min.js"></script>
 <script>
-function hrefToForget(){
-	location.href="forget.html"
-}
-function hrefToRegister(){
-	location.href="register.html"
-}
-function hrefToHome(){
-	location.href="../homepage/home.html"
-}
+function hrefToForget(){location.href="forget.html"}
+function hrefToRegister(){location.href="register.html"}
+function remainTime(){location.href="../../homepage/home.html";}
+$("#send" ).on("click",function(){
+	var username = $("#user" ).val();
+	var passwd = $("#passwd" ).val();
+	$.ajax({
+		url:'/api/user/login',
+		type:"POST",
+		dataType:'json',
+		data:{
+			username:username,
+			passwd:passwd
+		},
+		success:function(result){
+			console.log("result",result);
+			if(result.code==1){
+				alert("登陆成功");
+				setTimeout(remainTime,1500);
+			}else{
+				alert(result.msg)
+			}
+		},
+		/*complete:function(res){
+		 console.log('res',res)
+		 }*/
+	});
+});
 </script>
 </html>
